--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 copy.src.files=false
 copy.src.target=C:\\xampp\\htdocs\\Arquitectura
-index.file=LoginController.php
+index.file=Controllers/LoginController.php
 run.as=LOCAL
 url=http://localhost/Arquitectura/
