--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 copy.src.files=false
 copy.src.target=C:\\xampp\\htdocs\\Arquitectura
+getter.setter.method.name.generation=AS_JAVA
 index.file=Controllers/LoginController.php
 run.as=LOCAL
 url=http://localhost/Arquitectura/
