Combinado con el trabajo de Nico

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,5 @@
 copy.src.files=false
-copy.src.target=C:\\xampp\\htdocs\\Arquitectura
-getter.setter.method.name.generation=AS_JAVA
-index.file=Controllers/LoginController.php
+copy.src.target=C:\\xampp\\htdocs\\PhpProject1
+index.file=index.php
 run.as=LOCAL
-url=http://localhost/Arquitectura/
+url=http://localhost/aseguradora/
